--- a/Home.html
+++ b/Home.html
@@ -90,13 +90,14 @@ c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
         <h2 class="u-text u-text-1">
           <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" href="https://weather.com/weather/today/l/4f8d83ac21d35f19dda1e434b4f990c37bb60254d47853b8a07d2236e655127c">Fayette, MS Weather Forecast and Conditions - The Weather Channel | Weather.com</a>
         </h2>
-        <h2 class="u-text u-text-default u-text-2">AP VIBE ZONE</h2><span class="u-file-icon u-icon u-icon-1" data-href="https://www.youtube.com/channel/UCAgU7_4uRHO86_sbieEY5EQ/feature" data-target="_blank"> src="C:\Users\bhale\Downloads\00sei4NEWSoverlay\Individual-elements" alt=""></span>
+        <h2 class="u-text u-text-default u-text-2">AP VIBE ZONE</h2><span class="u-file-icon u-icon u-icon-circle u-palette-1-base u-icon-1" data-href="https://www.youtube.com/channel/UCAg7_sbieEY5EQ/featured" data-target="_blank"><img src="/images/148758.png" alt=""></span>
         <h2 class="u-text u-text-default u-text-3">AP AWARENESS</h2>
         <a href="https://nicepage.com/wordpress-themes" class="u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-btn u-button-style u-none u-text-palette-1-base u-btn-2">Hyperlink</a>
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <style></style>
           <p>Sample HTML. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
         </div>
+        <h2 class="u-text u-text-4">https://www.youtube.com/channel/UCAgU7_4uRHO86_sbieEY5EQ/featured</h2>
       </div>
     </section>
     
