--- a/Home.html
+++ b/Home.html
@@ -97,7 +97,7 @@ c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
           <style></style>
           <p>Sample HTML. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
         </div>
-        <h2 class="u-text u-text-4">https://www.youtube.com/channel/UCAgU7_4uRHO86_sbieEY5EQ/featured</h2>
+        <h2 class="u-text u-text-4">rtmp://a.rtmp.youtube.com/live2</h2>
       </div>
     </section>
     
